--- a/TH3/src/app/app.component.html
+++ b/TH3/src/app/app.component.html
@@ -1,2 +1,2 @@
-<a routerLink="/product/list">Danh sách sản phẩm</a>
+<a routerLink="/product">Danh sách sản phẩm</a>
 <router-outlet></router-outlet>
